--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -34,6 +34,8 @@
     border-radius: 5px;
     // border: 2px solid red;
     max-height: 750px;
+
+    overflow-x: hidden;
     overflow-y: auto;
 }
 
