--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -90,7 +90,6 @@
     justify-content: flex-end;
     align-items: center;
     max-height: 50px;
-    min-height: 30px;
     max-width: 580px;
     padding: 10px;
     font-size: 14px;
@@ -164,7 +163,7 @@
 }
 
 .post-media-body-div {
-    min-height: 75px;
+    // min-height: 75px;
     max-width: 580px;
     padding-left: 20px;
     padding-right: 30px;
@@ -216,7 +215,7 @@
 }
 
 .post-quo-title-div {
-    min-height: 45px;
+    // min-height: 45px;
     max-width: 580px;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
@@ -343,7 +342,7 @@
 
 
 .post-text-title-div {
-    min-height: 45px;
+    // min-height: 45px;
     max-width: 580px;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
@@ -405,7 +404,7 @@
 }
 
 .post-chat-title-div {
-    min-height: 45px;
+    // min-height: 45px;
     max-width: 580px;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
