--- a/app/assets/stylesheets/post-form.scss
+++ b/app/assets/stylesheets/post-form.scss
@@ -84,6 +84,10 @@
     cursor: pointer;
 }
 
+.noFileUploaded:hover {
+    cursor: not-allowed;
+}
+
 .photo-form {
     // border: 3px solid red;
     width: 580px;
