able to like and unlike

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -83,12 +83,12 @@
 
 .far-heart, .fa-heart {
     font-size: 20px;
+}
+
+.likedheart {
     color: #ff492f;
 }
 
-// .liked-heart {
-//     color: #ff492f;
-// }
 
 .post-all-footer-div {
     display: flex;
