--- a/app/assets/stylesheets/post-form.scss
+++ b/app/assets/stylesheets/post-form.scss
@@ -39,6 +39,7 @@
     height: 20px;
     font-size: 13px;
     font-family: sans-serif;
+    font-weight: 700;
     padding: 15px 15px 10px 20px;
     color: black;
     display: flex;
