--- a/app/assets/stylesheets/greeting.scss
+++ b/app/assets/stylesheets/greeting.scss
@@ -88,9 +88,16 @@
 .sportsblr {
     color: antiquewhite;
     font-size: 64px;
-    margin: 20px;
+    margin: 10px;
     font-family: sans-serif;
     font-weight: bolder;
+}
+
+.slogan {
+    color: antiquewhite;
+    font-weight: bold;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .sportsblr:hover {
