--- a/app/assets/stylesheets/greeting.scss
+++ b/app/assets/stylesheets/greeting.scss
@@ -98,6 +98,7 @@
     font-weight: bold;
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 10px;
 }
 
 .sportsblr:hover {
