--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -43,7 +43,10 @@
     padding-bottom: 10px;
     padding-left: 10px;
     border-bottom: 2px solid #566a81;
+}
 
+.RCB:hover{
+    cursor: default;
 }
 
 .RCB-div {
@@ -209,7 +212,9 @@
     padding-bottom: 20px;
 }
 
-
+.msg:hover {
+    cursor: default;
+}
 
 .setting-dropwdown-div {
     max-height: 75px;
