fixed media prev css

--- a/app/assets/stylesheets/post-form.scss
+++ b/app/assets/stylesheets/post-form.scss
@@ -143,6 +143,10 @@
     background-repeat: no-repeat;
 }
 
+.media-prev:focus {
+    outline: none;
+}
+
 .title-text {
     font-size: 35px;
     width: 500px;
