--- a/app/assets/stylesheets/session-form.scss
+++ b/app/assets/stylesheets/session-form.scss
@@ -140,3 +140,16 @@
 .demo {
     background-color: rgba(55, 139, 235, .9);
 }
+
+
+.about-links-session-form-page {
+    display: flex;
+    width: 75px;
+    justify-content: space-between;
+    margin-right: 45px;
+    margin-top: 25px;
+    padding: 5px;
+
+
+    // border: 1px solid red;
+}
