--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -198,21 +198,33 @@
     max-width: 580px;
     padding: 10px;
     font-size: 14px;
+
+    position: relative;
+
+    // border: 1px solid green;
+}
+
+.post-likes-count {
+    position: absolute;
+    left: 1%;
+    top: -40%;
+
+    // border: 1px solid red;
 }
 
 .footer-flex-div {
-    // min-width: 70px;
     min-width: 280px;
     max-width: 580px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
     padding-right: 10px;
-
     position: absolute;
     padding-bottom: 20px;
+
+    // border: 1px solid red;
 }
+
 
 .msg:hover {
     cursor: default;
