--- a/app/assets/stylesheets/greeting.scss
+++ b/app/assets/stylesheets/greeting.scss
@@ -1,43 +1,23 @@
+// .backgroundImage {
+//     min-height: 100%;
+//     min-width: 1024px;
+//     width: 100%;
+//     height: auto;
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     z-index: -3;
+// }
+
 .backgroundImage {
-    min-height: 100%;
-    min-width: 1024px;
-    width: 100%;
-    height: auto;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
     position: fixed;
     top: 0;
     left: 0;
     z-index: -3;
 }
-
-@media screen and (max-width: 1024px) {
-    .backgroundImage {
-        left: 50%;
-        margin-left: -512px; /* 50% */
-        z-index: -3;
-    }
-
-    
-}
-
-
-
-// .backgroundImage {
-//     position: fixed;
-//     top: 0;
-//     right: 31%;
-//     bottom: 0;
-//     left: 31%;
-//     margin: 0 -600px;
-//     background-size: cover;
-//     z-index: -3;
-// }
-
-// background-position: center center;
-// background-size: cover;
-// position: fixed;
-// background-repeat: no-repeat;
-// width: 100%;
-// height: 100%;
 
 .splash-logo-div {
     position: absolute;
@@ -66,11 +46,9 @@
 }
 
 .splash-home {
-
     // background-image: image-url("snowbord.jpg");
     // background-size: cover;
     // background-position: center;
-
     position: absolute;
     top: 0;
     bottom: 0;
