--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -11,6 +11,7 @@
   window.fcb = "<%= image_url('fcb.jpg') %>";
   window.dashboard = "<%= image_url('dashboard.jpg') %>";
   window.basketball = "<%= image_url('basketball.jpg') %>";
+  window.track = "<%= image_url('track.jpg') %>";
 </script>
 
 <div id="root">
