change navbar CSS styling

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -15,7 +15,7 @@
     justify-content: space-between;
     align-items: center;
     width: 95%;
-    max-width: 1500px;
+    // max-width: 1500px;
 }
 
 .logo-splash {
