add new stlye to media post on explore page

--- a/app/assets/stylesheets/explore.scss
+++ b/app/assets/stylesheets/explore.scss
@@ -276,7 +276,8 @@
   background-position: center;
 }
 
-.explore-post-media-audio-div:focus {
+.explore-post-media-audio-div:focus,
+.explore-post-media-div:focus {
   outline: 0;
 }
 
