--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -152,6 +152,12 @@
     // border: 2px solid red;
 }
 
+.likes-page-title {
+    color: white;
+    padding-left: 75px;
+    font-size: 16px;
+}
+
 .posts-index-list > * {
     margin-bottom: 20px;
     border-radius: 5px;
