add style to explore page posts

--- a/app/assets/stylesheets/explore.scss
+++ b/app/assets/stylesheets/explore.scss
@@ -265,6 +265,7 @@
   max-width: 300px;
   background-size: cover;
   background-position: center;
+  object-fit: cover;
 }
 
 .explore-post-media-audio-div {
